fixed the alignement of two buttons in the decision view page

--- a/assets/styles/decisionView.scss
+++ b/assets/styles/decisionView.scss
@@ -1,8 +1,8 @@
 @import "_theme";
 
 .pictureCreator {
-    height: 6rem;
-    width: 6rem;
+    height: 5rem;
+    width: 5rem;
 }
 
 #timelineGrid {
